[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "transmogrifier"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "attrs",
  "beautifulsoup4==4.12.3",
  "boto3",
  "boto3-stubs",
  "click",
  "jsonlines",
  "lxml",
  "lxml-stubs",
  "python-dateutil",
  "requests",
  "sentry-sdk",
  "smart-open[s3]",
  "types-python-dateutil",
  "timdex-dataset-api @ git+https://github.com/MITLibraries/timdex-dataset-api.git",
]

[project.scripts]
transform = "transmogrifier.cli:main"

[dependency-groups]
dev = [
  "coveralls",
  "ipython",
  "moto",
  "mypy",
  "pip-audit",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["transmogrifier*"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/", "output/"]

[[tool.mypy.overrides]]
module = [
    "bs4",
    "bs4.*",
    "pandas",
    "requests"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py313"
line-length = 90
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
  "COM812",
  "D107",
  "N812",
  "PTH",
  "C90",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D205",
  "D212",
  "D402",
  "EM101",
  "EM102",
  "G004",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "S321",
  "TD002",
  "TD003",
  "TRY003",
]
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [
    "json",
    "xml",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
  "ANN",
  "ARG001",
  "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"